# py-slicing-reference

./: README.md  listy.py  pyproject.toml  test_listy.py
