[tool.poetry]
name = "slice-ref"
version = "0.0.1"
description = ""
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]
packages = [{include = "listy.py"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^5.41.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
